Documentation edits made through Mintlify web editor

--- a/gameserver/ressourcenlegende.mdx
+++ b/gameserver/ressourcenlegende.mdx
@@ -1,6 +1,30 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Ressourcenlegende"
+description: "Hier findest du eine Übersicht darüber, welche Hardwareressourcen wir für jedes Spiel mindestens voraussetzen und welche Konfiguration wir empfehlen, um ein optimales Spielerlebnis zu gewährleisten."
 mode: "wide"
 ---
 
+### Ressourcenlegende
+
+> - **CPU**: Anzahl der vCPU-Kerne
+> - **RAM**: Arbeitsspeicher
+> - **Speicher**: Empfohlener SSD-Speicherplatz
+> - **Ports**: Anzahl benötigter Ports (für Spiel, RCON, Webinterface, etc.)
+
+| **Spiel**               | **Minumum: CPU / RAM / Speicher / Ports** | **Empfohlen: CPU / RAM / Speicher / Ports** |
+| ----------------------- | ----------------------------------------- | :------------------------------------------ |
+| Team Fortress 2         | 1 Kern / 2 GB / 15 GB / 1 Port            | 2 Kern / 3 GB / 20 GB / 1 Port              |
+| Terraria Vanilla        | 1 Kern / 1 GB / 5 GB / 1 Port             | 1 Kern / 2 GB / 10 GB / 1 Port              |
+| 7 Days To Die           | 1 Kern / 3 GB / 15 GB / 2 Port            | 2 Kern / 4 GB / 20 GB / 2 Port              |
+| Astroneer               | 1 Kern / 1 GB / 5 GB / 1 Port             | 2 Kern / 2 GB / 5 GB / 1 Port               |
+| Minecraft Paper         | 1 Kern / 2 GB / 5 GB / 1 Port             | 2 Kern / 4 GB / 15 GB / 1 Port              |
+| Minecraft Vanilla       | 1 Kern / 2 GB / 5 GB / 1 Port             | 2 Kern / 4 GB / 15 GB / 1 Port              |
+| Minecraft Bungeecord    | 1 Kern / 2 GB / 5 GB / 1 Port             | 2 Kern / 4 GB / 15 GB / 1 Port              |
+| Counter Strike 2        | 2 Kern / 2 GB / 50 GB / 2 Port            | 4 Kern / 4 GB / 50 GB / 2 Port              |
+| Insurgency: Sandstorm   | 1 Kern / 2 GB / 5 GB / 2 Port             | 2 Kern / 4 GB / 5 GB / 2 Port               |
+| Risk of Rain 2          | 2 Kern / 3 GB / 5 GB / 3 Port             | 4 Kern / 6 GB / 10 GB / 3 Port              |
+| Garrys Mod              | 1 Kern / 2 GB / 5 GB / 1 Port             | 2 Kern / 4 GB / 20 GB / 1 Port              |
+| Statisfactory           | 1 Kern / 2 GB / 5 GB / 3 Port             | 4 Kern / 6 GB / 5 GB / 3 Port               |
+| Ark: Survival Evolved   | 2 Kern / 6 GB / 20 GB / 3 Port            | 6 Kern / 10 GB / 50 GB / 3 Port             |
+| Conan Exiles            | 1 Kern / 6 GB / 5 GB / 3 Port             | 2 Kern / 8 GB / 10 GB / 3 Port              |
+| Farming Simulator 22/25 | 1 Kern / 3 GB / 50 GB / 3 Port            | 2 Kern / 4 GB / 55 GB / 2 Port              |
