Documentation edits made through Mintlify web editor

--- a/gameserver/ressourcenlegende.mdx
+++ b/gameserver/ressourcenlegende.mdx
@@ -11,6 +11,10 @@ mode: "wide"
 > - **Speicher**: Empfohlener SSD-Speicherplatz
 > - **Ports**: Anzahl benötigter Ports (für Spiel, RCON, Webinterface, etc.)
 
+<Frame>
+  
+</Frame>
+
 | **Spiel**               | **Minumum: CPU / RAM / Speicher / Ports** | **Empfohlen: CPU / RAM / Speicher / Ports** |
 | ----------------------- | ----------------------------------------- | :------------------------------------------ |
 | Team Fortress 2         | 1 Kern / 2 GB / 15 GB / 1 Port            | 2 Kern / 3 GB / 20 GB / 1 Port              |
