Documentation edits made through Mintlify web editor

--- a/gameserver/ls2225.mdx
+++ b/gameserver/ls2225.mdx
@@ -1,6 +1,26 @@
 ---
-title: 'Farming Simulator 22/25'
-description: 'Description of your new file.'
+title: "Farming Simulator 22/25"
 mode: "wide"
 ---
 
+### 📌 Wichtige Information zur Verfügbarkeit
+
+Unsere **Farming Simulator 22 und 25** Server bieten wir **ausschließlich auf Anfrage** an.\
+Der Grund dafür ist, dass **für jeden einzelnen Server eine eigene Lizenz benötigt wird**, die nicht automatisch vergeben werden kann.
+
+### ❓ Warum ist das so?
+
+GIANTS Software, die Entwickler von Farming Simulator, setzen voraus, dass **jede Instanz eines dedizierten Servers separat lizenziert** wird.\
+Das bedeutet, dass wir keine automatisierte Bereitstellung wie bei anderen Spielen anbieten können.
+
+### 📬 So buchst du einen Server
+
+Wenn du Interesse an einem Farming Simulator Server hast, gehe bitte wie folgt vor:
+
+1. **Erstelle ein Support-Ticket** in unserem Kundencenter.
+2. Wähle als Thema: **„Farming Simulator Anfrage“**.
+3. Unser Team wird sich schnellstmöglich bei dir melden und dir **alle weiteren Informationen** sowie die Konditionen mitteilen.
+
+> 📢 Hinweis: Ohne eine gültige Farming Simulator-Serverlizenz kann leider kein Server bereitgestellt werden.
+
+Bei Fragen oder Unklarheiten steht dir unser Support-Team jederzeit gerne zur Verfügung\!
