Documentation edits made through Mintlify web editor

--- a/v-server/installationen.mdx
+++ b/v-server/installationen.mdx
@@ -223,7 +223,7 @@ Hier findest du einige Beispiele der Installationen, die du auf deinem V-Server 
     ```
 
     
-    ```bash 20.04, 22.0, 24.04
+    ```bash Ubuntu 20.04, 22.0, 24.04
     sudo mysql_secure_installation
     ```
 
@@ -238,3 +238,7 @@ Hier findest du einige Beispiele der Installationen, die du auf deinem V-Server 
     ```
   </Accordion>
 </AccordionGroup>
+
+<Info>
+  Mehr Installationen folgen in kürze.
+</Info>
