Documentation edits made through Mintlify web editor

--- a/dedi/allgemein.mdx
+++ b/dedi/allgemein.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Dedicated Server"
+title: "Allgemeine Info"
 description: "Unsere Dedicated Server bieten dir die volle Leistung physischer Hardware – ganz ohne Nachbarn, Ressourcen-Sharing oder Kompromisse."
 ---
 
