Documentation edits made through Mintlify web editor

--- a/gameserver/ls-installation.mdx
+++ b/gameserver/ls-installation.mdx
@@ -1,8 +1,42 @@
 ---
-title: "➮ Installation"
-description: "Description of your new file."
+title: "➮ Installation / Einrichtung vom LS25"
 ---
 
 <Tip>
   Folgt in Kürze
 </Tip>
+
+### 🌐 1. Bestelle einen Farming Simulator 2025 Server
+
+Geh auf unsere Website und wähle oben in der Navigationsliste "Gameserver" aus.
+
+-\> https://nexorahost.com/product/gameserver
+
+Wähle die Leistung die du benötigst. Falls du keine Vorstellung hast was du benötigst, schau hier:\
+-\> https://docs.nexorahost.com/gameserver/ressourcenlegende
+
+Buche nun den Server um die automatische Installation zu starten.
+
+<Info>
+  Wichtig: Wähle auch bei Spiel "Farming Simulator 2025 (eigene Lizenz)" aus.
+</Info>
+
+### 🖥️ 2. Panel öffnen
+
+Wähle dein Produkt welches du grade bestellt hast aus und logge dich über den Button ein:
+
+![image.png](/images/image.png)
+
+### 🖥️ 3. Lizenz eingeben
+
+Warte bis die Installation abgeschlossen ist und klicke dann auf "Startup".\
+\
+Ändere die rot unterstrichenden Einstellungen.
+
+<Info>
+  Deine Ports findest du unter "Network", falls nur ein Port da ist, kannst du mit dem Button "Create Allocation" weitere Ports erstellen. \
+  \
+  Wichtig: Du musst bei dem bestellen der Servers mindestens 3 Ports ausgewählt haben.
+</Info>
+
+![image.png](/images/image.png)
