Documentation edits made through Mintlify web editor

--- a/gameserver/ls-installation.mdx
+++ b/gameserver/ls-installation.mdx
@@ -27,7 +27,7 @@ Wähle dein Produkt welches du grade bestellt hast aus und logge dich über den 
 
 ![image.png](/images/image.png)
 
-### 🖥️ 3. Lizenz eingeben
+### 🔒 3. Lizenz eingeben
 
 Warte bis die Installation abgeschlossen ist und klicke dann auf "Startup".\
 \
@@ -40,3 +40,46 @@ Warte bis die Installation abgeschlossen ist und klicke dann auf "Startup".\
 </Info>
 
 ![image.png](/images/image.png)
+
+### 🖥️ 4. VNC Konsole öffnen
+
+Starte nun den Server neu und gehe dann auf die IP deines Servers mit dem Port den du grade unter "VNC Port" eingetragen hast. \
+z.B. `http://46.4.54.119:15432`
+
+Klicke auf der Seite nun "Connect" und gib das Passwort ein was du beim letzten Schritt unter "VNC PASS" eingegeben hast.
+
+Nun öffnet sich ein Fenster was so aussehen sollte:
+
+![2.PNG](/images/2.PNG)
+
+Gib deine Lizenz ein, die du von Giants oder einer anderen Website gekauft hast.
+
+Wichtig\! Es darf keine Steam Lizenz sein.
+
+Nach dem aktivieren der Lizenz kannst du die installation starten. Nach der Installation kommt eine Frage, diese kannst du mit Nein/No beantworten.
+
+### 🖥️ 5. Server starten
+
+Glückwunsch, nun ist der Server installiert. Stoppe jetzt den Server und erstelle ein neuen Port (wie beim letzen mal unter "Network"). Kopiere diesen Port und füge ihn im Dateimanager in folgende Datei ein:
+
+/home/[container](https://gs.nexorahost.com/server/32a64237/files)/[Farming Simulator 2025](https://gs.nexorahost.com/server/32a64237/files#/Farming%20Simulator%202025)/dedicatedServer.xml
+
+Füge den neuen Port wie bei dem folgendem Bild ein:
+
+![5.PNG](/images/5.PNG)
+
+Gehe nun wieder auf den Reiter "Startup" und stelle die Einstellung "Progression" auf "RUN" um. Starte nun den Server. Nun sollte unter der IP und dem Port, den du grade in die Datei eingetragen hast. Die Standard Seite vom LS25 Server sein. \
+Als letzen Schritt musst du nurnoch auf dem Panel vom LS25 Server den Server Port auf den Port ändern der dir wie im nächsten Bild angezeigt, dargestellt wird:
+
+![6.PNG](/images/6.PNG)
+
+In meinem Fall wäre das die 15734.
+
+### 🖥️ 6. Fertig
+
+Glückwunsch, dein Server ist nun Fertig.
+
+## 📬 Hilfe benötigt?
+
+Unser Team hilft dir gern beim Einrichten oder Prüfen deiner DNS-Einträge.
+🔗 [Support kontaktieren](https://nexorahost.com/account/tickets)
