Documentation edits made through Mintlify web editor

--- a/gameserver/spiele.mdx
+++ b/gameserver/spiele.mdx
@@ -25,8 +25,8 @@ mode: "wide"
 - Sons Of The Forest
 - Ark: Survival Evolved
 - Conan Exiles
-  
-<Note>
-Farming Simulator 22/25 (Nur möglich mit eigener Lizenz über den Support)
-</Note>
+- Farming Simulator 25
 
+<Note>
+  Farming Simulator 22/25 (Nur möglich mit eigener Lizenz)
+</Note>
