Documentation edits made through Mintlify web editor

--- a/gameserver/ls-installation.mdx
+++ b/gameserver/ls-installation.mdx
@@ -27,7 +27,7 @@ Wähle dein gerade bestelltes Produkt aus und logge dich über den entsprechende
 
 ---
 
-### 🔒 3. Lizenz eingeben
+### 🔒 3. Grundeinstellungen
 
 Warte, bis die Installation abgeschlossen ist, und klicke dann im Panel auf **"Startup"**.
 
